2017-11-15  Qing Zhao  <qing.zhao@oracle.com>

	PR middle-end/78809
	* gimple-fold.c (gimple_fold_builtin_string_compare): Add handling
	of replacing call to strncmp with corresponding call to strcmp when
	meeting conditions.

2017-11-17  Sergey Shalnov  <Sergey.Shalnov@intel.com>

	* config/i386/x86-tune.def (X86_TUNE_AVX256_OPTIMAL): Add tuning
	option prefer-avx256 for skylake-avx512 configuration.
	* config/i386/i386.c (ix86_option_override_internal): Ditto.
	(get_builtin_code_for_version): Ditto.

2017-11-17  Chung-Ju Wu  <jasonwucj@gmail.com>
	    Monk Chiang  <sh.chiang04@gmail.com>

	* config/nds32/nds32.h (FIRST_PSEUDO_REGISTER): Modify.
	(FIXED_REGISTERS): Reserve more register numbers.
	(CALL_USED_REGISTERS): Likewise.
	(REG_ALLOC_ORDER): Likewise.
	(REG_CLASS_CONTENTS): Likewise.
	(REGISTER_NAMES): Likewise.

2017-11-17  Chung-Ju Wu  <jasonwucj@gmail.com>
	    Kito Cheng  <kito.cheng@gmail.com>

	* config/nds32/nds32-modes.def: Add vector mode V4QI V2HI V8QI V4HI
	V2SI.
	* config/nds32/iterators.md: Add vector mode iterators and attributes.

2017-11-16  Steven Munroe  <munroesj@gcc.gnu.org>

	* config/rs6000/mmintrin.h (_mm_add_pi32[_ARCH_PWR]): Correct
	parameter list for vec_splats.

2017-11-16  Joseph Myers  <joseph@codesourcery.com>

	* doc/invoke.texi (-std=c17): Refer to 2018 expected publication
	date of C17.
	(-std=c18, -std=iso9899:2018, -std=gnu18): Document option
	aliases.

2017-11-16  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR bootstrap/82856
	* doc/install.texi: Document incompatibility of Perl >=5.6.26
	with the required version of automake 1.11.6.

2017-11-16  Pat Haugen  <pthaugen@us.ibm.com>

	* rs6000/power9.md (power9fpdiv): New automaton and cpu_unit defined
	for it.
	(DU_C2_3_power9): Correct reservation combinations.
	(FP_DIV_power9, VEC_DIV_power9): New.
	(power9-alu): Split out rotate/shift...
	(power9-rot): ...to here, correct dispatch resource.
	(power9-cracked-alu, power9-mul, power9-mul-compare): Correct dispatch
	resource.