@@ -1,4 +1,9 @@
-2017-11-15  Qing Zhao  <qing.zhao@oracle.com>
+2017-11-17  Richard Biener  <rguenther@suse.de>
+
+	* tree-ssa-pre.c (phi_translate_1): Remove redundant constant
+	folding of references.
+
+2017-11-17  Qing Zhao  <qing.zhao@oracle.com>
 
 	PR middle-end/78809
 	* gimple-fold.c (gimple_fold_builtin_string_compare): Add handling
